...
        android:layout_marginEnd="32dp"
        android:text="@string/btn_notifications"
        app:layout_constraintBottom_toTopOf="@+id/btnPayments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDocs" />

    <Button
        android:id="@+id/btnDocs"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btn_docs"
        app:layout_constraintBottom_toTopOf="@+id/btnNotifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChat" />

    <Button
        android:id="@+id/btnChat"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
...
