<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_confirm_reservation"
    tools:context=".vistas.ConfirmReservationActivity">

    <include
        android:id="@+id/include"
        layout="@layout/header"
        android:layout_width="match_parent"
...
    <TextView
        android:id="@+id/txtConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_reservation_completed"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnCloseConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgIncorrecto" />

    <ImageView
        android:id="@+id/imgCorrecto"
...
