...
            android:id="@+id/btnThursday"
            android:tag="@string/thursday_eng"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/letter_thursday"
            app:layout_constraintEnd_toStartOf="@+id/btnFriday"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnWednesday"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnFriday"
...
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayButtonContainer" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listTimeRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
...
